methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:3: error: too many arguments for method isFacingTrial: ()Boolean
  isFacingTrial(Color.pink)
               ^