methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  isFacingTrial(Color.pink)
     
 }

def isFacingTrial(): Boolean={
if( estFaceMur()){
  return(false)
}
  avance()
  if (getCouleurSol()==Color.pink){
  recule()
    return(true)
}else{
    recule()
  return false
}
}